Reorganized folders and added race.csv

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -422,38 +422,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "c55c67e8",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "White               4043\n",
-       "Black               2331\n",
-       "Hispanic            1604\n",
-       "Unknown race         797\n",
-       "Asian                138\n",
-       "Native American      128\n",
-       "Pacific Islander      55\n",
-       "Name: race, dtype: int64"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
-    "df.to_csv('out.zip', index=False,\n",
-    "          compression=compression_opts)  "
+    "df_race.to_csv('race.csv', index=False)  \n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23e62539",
+   "id": "ad3b4418",
    "metadata": {},
    "outputs": [],
    "source": [
